refs #46864: Fixing Event Card spacing issue.

--- a/web/themes/custom/gt_honors/patterns/organisms/alert/scss/styles.scss
+++ b/web/themes/custom/gt_honors/patterns/organisms/alert/scss/styles.scss
@@ -10,8 +10,8 @@
   border: 2px solid $color-tech-gold;
   border-radius: px-to-rem(10px);
 
-  &__body {
-    margin-top: 1rem;
+  &__title.h4 {
+    margin-bottom: 1rem;
   }
 
   &__link {
